# vlkxn

./: .gitignore  AGENTS.md  Cargo.toml  GUIDE.md  README.md
.github/workflows/: ci.yml  release.yml
crates/vlkxn-cli/: Cargo.toml
crates/vlkxn-cli/src/: main.rs
crates/vlkxn-controller/: Cargo.toml
crates/vlkxn-controller/src/: daemon.rs
crates/vlkxn-core/: Cargo.toml
crates/vlkxn-core/src/: arp.rs  config.rs  crypto.rs  lib.rs  p2p.rs  tun.rs  types.rs
crates/vlkxn-gui/: Cargo.toml
crates/vlkxn-gui/src/: main.rs
scripts/: build-deb.sh  install.bat  install.ps1  install.sh  vlkxn-daemon.service  vlkxn.desktop
