[package]
name = "vlkxn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
vlkxn-core = { path = "../vlkxn-core" }
vlkxn-controller = { path = "../vlkxn-controller" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
