[package]
name = "vlkxn-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
vlkxn-core = { path = "../vlkxn-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true
